# top2vec

./: README.md  environment.yml  pyproject.toml
top2vec/: configuration_top2vec.py
