[tool.poetry]
name = "top2vec"
version = "0.1.0"
description = ""
authors = ["Santiago Hincapie <shinca12@eafit.edu.co>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.16.2"

[tool.poetry.dev-dependencies]
ipykernel = "^6.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
